# cozy_rag-cli

./: .gitignore  ADOPTION.md  CHECKLIST.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: new-project.ps1  new-project.sh
src/rag_method/: __init__.py  cli.py  contract.py  diff.py  gates.py  runner.py  workflow.py
src/rag_method/adapters/: __init__.py  azure_search.py  claude_opaque.py  reference.py
src/rag_method/scorers/: __init__.py  citation.py  completeness.py  groundedness.py  recency.py  retrieval.py
template/: DECISIONS.md  EXPERIMENTS.md  gates.yaml  pipeline.py  rag-spec.yaml
template/envs/: dev.yaml  prod.yaml
template/evals/datasets/: adversarial.jsonl  golden.jsonl  unanswerable.jsonl
tests/: test_smoke.py  test_workflow.py
