[project]
name = "rag-method"
version = "0.1.2"
description = "Stack-agnostic harness for the RAG Development Methodology: backend contract, eval runner, gates, diff."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
rag-method = "rag_method.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_method"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
